# cmake-cheatsheet

./: .gitignore  .vimrc  README.md  build.sh  docker-compose.yml
cmake/: CMakeLists.txt  main.cpp
cmake/one/: CMakeLists.txt  one.cpp
cmake/one/include/one/: one.h
docker/: Dockerfile
